"tab ul classı değişti"

--- a/src/app/Tab/tab.component.html
+++ b/src/app/Tab/tab.component.html
@@ -34,7 +34,7 @@
             <!-- Ödemeler -->
             <tab heading="Ödemeler" customClass="tab-ozel">
               <div class="tab-page-content">
-                <ul class="odeme-listele">
+                <ul class="odeme-listele-tab">
                   <li>
                     <a href="#">
 
