--- a/src/app/Tab/tab.component.html
+++ b/src/app/Tab/tab.component.html
@@ -36,7 +36,7 @@
               <div class="tab-page-content">
                 <ul class="odeme-listele-tab">
                   <li>
-                    <a href="##">
+                    <a href="#">
 
                     </a>
                   </li>
