tab ödeme ekle yapıldı

--- a/src/app/Tab/tab.component.html
+++ b/src/app/Tab/tab.component.html
@@ -37,7 +37,62 @@
                 <ul class="odeme-listele-tab">
                   <li>
                     <a href="#">
-
+                      <!-- İcon -->
+                      <div class="tab-page-content-icon-block">
+                        <i class="fa fa-sign-out fa-rotate-90"></i>
+                      </div>
+                      <!-- İcon -->
+                      <!-- Text -->
+                      <div class="tab-page-content-text">
+                        <p>25,00 <i class="fa fa-try"></i> 'lik Ödeme Gerçekleşti.</p>
+                        <span>12 Aralık 2016 / Ahmet Elçik</span>
+                      </div>
+                      <!-- Text -->
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <!-- İcon -->
+                      <div class="tab-page-content-icon-block">
+                        <i class="fa fa-sign-out fa-rotate-90"></i>
+                      </div>
+                      <!-- İcon -->
+                      <!-- Text -->
+                      <div class="tab-page-content-text">
+                        <p>25,00 <i class="fa fa-try"></i> 'lik Ödeme Gerçekleşti.</p>
+                        <span>12 Aralık 2016 / Ahmet Elçik</span>
+                      </div>
+                      <!-- Text -->
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <!-- İcon -->
+                      <div class="tab-page-content-icon-block">
+                        <i class="fa fa-sign-out fa-rotate-90"></i>
+                      </div>
+                      <!-- İcon -->
+                      <!-- Text -->
+                      <div class="tab-page-content-text">
+                        <p>25,00 <i class="fa fa-try"></i> 'lik Ödeme Gerçekleşti.</p>
+                        <span>12 Aralık 2016 / Ahmet Elçik</span>
+                      </div>
+                      <!-- Text -->
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      <!-- İcon -->
+                      <div class="tab-page-content-icon-block">
+                        <i class="fa fa-sign-out fa-rotate-90"></i>
+                      </div>
+                      <!-- İcon -->
+                      <!-- Text -->
+                      <div class="tab-page-content-text">
+                        <p>25,00 <i class="fa fa-try"></i> 'lik Ödeme Gerçekleşti.</p>
+                        <span>12 Aralık 2016 / Ahmet Elçik</span>
+                      </div>
+                      <!-- Text -->
                     </a>
                   </li>
                 </ul>
@@ -50,6 +105,7 @@
               <div class="tab-page-content">
                 <ul class="not-listele-tab">
                   <li>
+                    <li><button class="btn btn-primary-ozel"><i class="fa fa-plus"></i> Yeni Not</button></li>
                     <a href="#">
                       <!-- İcon -->
                       <div class="tab-page-content-icon-block">
