--- a/src/app/Tab/tab.component.html
+++ b/src/app/Tab/tab.component.html
@@ -104,7 +104,7 @@
             <tab heading="Notlar" customClass="tab-ozel">
               <div class="tab-page-content">
                 <ul class="not-listele-tab">
-                  <li><button class="btn btn-primary-ozel"><i class="fa fa-plus"></i> Yeni Not</button></li>
+                  <li class="not-listele-tab-not-ekle-btn"><button class="btn btn-primary-ozel btn-block"><i class="fa fa-plus"></i> Yeni Not</button></li>
                   <li>
                     <a href="#">
                       <!-- İcon -->
