tab icerik bos ise bu li gosterilcek

--- a/src/app/Tab/tab.component.html
+++ b/src/app/Tab/tab.component.html
@@ -35,66 +35,69 @@
             <tab heading="Ödemeler" customClass="tab-ozel">
               <div class="tab-page-content">
                 <ul class="odeme-listele-tab">
-                  <li>
-                    <a href="#">
-                      <!-- İcon -->
-                      <div class="tab-page-content-icon-block">
-                        <i class="fa fa-sign-out fa-rotate-90"></i>
-                      </div>
-                      <!-- İcon -->
-                      <!-- Text -->
-                      <div class="tab-page-content-text">
-                        <p>25,00 <i class="fa fa-try"></i> 'lik Ödeme Gerçekleşti.</p>
-                        <span>12 Aralık 2016 / Ahmet Elçik</span>
-                      </div>
-                      <!-- Text -->
-                    </a>
+                  <li class="tab-page-content-blank">
+                    <i class="fa fa-info-circle fa-5x"></i>
                   </li>
-                  <li>
-                    <a href="#">
-                      <!-- İcon -->
-                      <div class="tab-page-content-icon-block">
-                        <i class="fa fa-sign-out fa-rotate-90"></i>
-                      </div>
-                      <!-- İcon -->
-                      <!-- Text -->
-                      <div class="tab-page-content-text">
-                        <p>25,00 <i class="fa fa-try"></i> 'lik Ödeme Gerçekleşti.</p>
-                        <span>12 Aralık 2016 / Ahmet Elçik</span>
-                      </div>
-                      <!-- Text -->
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <!-- İcon -->
-                      <div class="tab-page-content-icon-block">
-                        <i class="fa fa-sign-out fa-rotate-90"></i>
-                      </div>
-                      <!-- İcon -->
-                      <!-- Text -->
-                      <div class="tab-page-content-text">
-                        <p>25,00 <i class="fa fa-try"></i> 'lik Ödeme Gerçekleşti.</p>
-                        <span>12 Aralık 2016 / Ahmet Elçik</span>
-                      </div>
-                      <!-- Text -->
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <!-- İcon -->
-                      <div class="tab-page-content-icon-block">
-                        <i class="fa fa-sign-out fa-rotate-90"></i>
-                      </div>
-                      <!-- İcon -->
-                      <!-- Text -->
-                      <div class="tab-page-content-text">
-                        <p>25,00 <i class="fa fa-try"></i> 'lik Ödeme Gerçekleşti.</p>
-                        <span>12 Aralık 2016 / Ahmet Elçik</span>
-                      </div>
-                      <!-- Text -->
-                    </a>
-                  </li>
+                  <!--<li>-->
+                    <!--<a href="#">-->
+                      <!--&lt;!&ndash; İcon &ndash;&gt;-->
+                      <!--<div class="tab-page-content-icon-block">-->
+                        <!--<i class="fa fa-sign-out fa-rotate-90"></i>-->
+                      <!--</div>-->
+                      <!--&lt;!&ndash; İcon &ndash;&gt;-->
+                      <!--&lt;!&ndash; Text &ndash;&gt;-->
+                      <!--<div class="tab-page-content-text">-->
+                        <!--<p>25,00 <i class="fa fa-try"></i> 'lik Ödeme Gerçekleşti.</p>-->
+                        <!--<span>12 Aralık 2016 / Ahmet Elçik</span>-->
+                      <!--</div>-->
+                      <!--&lt;!&ndash; Text &ndash;&gt;-->
+                    <!--</a>-->
+                  <!--</li>-->
+                  <!--<li>-->
+                    <!--<a href="#">-->
+                      <!--&lt;!&ndash; İcon &ndash;&gt;-->
+                      <!--<div class="tab-page-content-icon-block">-->
+                        <!--<i class="fa fa-sign-out fa-rotate-90"></i>-->
+                      <!--</div>-->
+                      <!--&lt;!&ndash; İcon &ndash;&gt;-->
+                      <!--&lt;!&ndash; Text &ndash;&gt;-->
+                      <!--<div class="tab-page-content-text">-->
+                        <!--<p>25,00 <i class="fa fa-try"></i> 'lik Ödeme Gerçekleşti.</p>-->
+                        <!--<span>12 Aralık 2016 / Ahmet Elçik</span>-->
+                      <!--</div>-->
+                      <!--&lt;!&ndash; Text &ndash;&gt;-->
+                    <!--</a>-->
+                  <!--</li>-->
+                  <!--<li>-->
+                    <!--<a href="#">-->
+                      <!--&lt;!&ndash; İcon &ndash;&gt;-->
+                      <!--<div class="tab-page-content-icon-block">-->
+                        <!--<i class="fa fa-sign-out fa-rotate-90"></i>-->
+                      <!--</div>-->
+                      <!--&lt;!&ndash; İcon &ndash;&gt;-->
+                      <!--&lt;!&ndash; Text &ndash;&gt;-->
+                      <!--<div class="tab-page-content-text">-->
+                        <!--<p>25,00 <i class="fa fa-try"></i> 'lik Ödeme Gerçekleşti.</p>-->
+                        <!--<span>12 Aralık 2016 / Ahmet Elçik</span>-->
+                      <!--</div>-->
+                      <!--&lt;!&ndash; Text &ndash;&gt;-->
+                    <!--</a>-->
+                  <!--</li>-->
+                  <!--<li>-->
+                    <!--<a href="#">-->
+                      <!--&lt;!&ndash; İcon &ndash;&gt;-->
+                      <!--<div class="tab-page-content-icon-block">-->
+                        <!--<i class="fa fa-sign-out fa-rotate-90"></i>-->
+                      <!--</div>-->
+                      <!--&lt;!&ndash; İcon &ndash;&gt;-->
+                      <!--&lt;!&ndash; Text &ndash;&gt;-->
+                      <!--<div class="tab-page-content-text">-->
+                        <!--<p>25,00 <i class="fa fa-try"></i> 'lik Ödeme Gerçekleşti.</p>-->
+                        <!--<span>12 Aralık 2016 / Ahmet Elçik</span>-->
+                      <!--</div>-->
+                      <!--&lt;!&ndash; Text &ndash;&gt;-->
+                    <!--</a>-->
+                  <!--</li>-->
                 </ul>
               </div>
             </tab>
