--- a/src/app/Tab/tab.component.html
+++ b/src/app/Tab/tab.component.html
@@ -35,69 +35,66 @@
             <tab heading="Ödemeler" customClass="tab-ozel">
               <div class="tab-page-content">
                 <ul class="odeme-listele-tab">
-                  <li class="tab-page-content-blank">
-                    <i class="fa fa-info-circle fa-5x"></i>
+                  <li>
+                  <a href="#">
+                  <!-- İcon -->
+                  <div class="tab-page-content-icon-block">
+                  <i class="fa fa-sign-out fa-rotate-90"></i>
+                  </div>
+                  <!-- İcon -->
+                  <!-- Text -->
+                  <div class="tab-page-content-text">
+                  <p>25,00 <i class="fa fa-try"></i> 'lik Ödeme Gerçekleşti.</p>
+                  <span>12 Aralık 2016 / Ahmet Elçik</span>
+                  </div>
+                  <!-- Text -->
+                  </a>
                   </li>
-                  <!--<li>-->
-                  <!--<a href="#">-->
-                  <!--&lt;!&ndash; İcon &ndash;&gt;-->
-                  <!--<div class="tab-page-content-icon-block">-->
-                  <!--<i class="fa fa-sign-out fa-rotate-90"></i>-->
-                  <!--</div>-->
-                  <!--&lt;!&ndash; İcon &ndash;&gt;-->
-                  <!--&lt;!&ndash; Text &ndash;&gt;-->
-                  <!--<div class="tab-page-content-text">-->
-                  <!--<p>25,00 <i class="fa fa-try"></i> 'lik Ödeme Gerçekleşti.</p>-->
-                  <!--<span>12 Aralık 2016 / Ahmet Elçik</span>-->
-                  <!--</div>-->
-                  <!--&lt;!&ndash; Text &ndash;&gt;-->
-                  <!--</a>-->
-                  <!--</li>-->
-                  <!--<li>-->
-                  <!--<a href="#">-->
-                  <!--&lt;!&ndash; İcon &ndash;&gt;-->
-                  <!--<div class="tab-page-content-icon-block">-->
-                  <!--<i class="fa fa-sign-out fa-rotate-90"></i>-->
-                  <!--</div>-->
-                  <!--&lt;!&ndash; İcon &ndash;&gt;-->
-                  <!--&lt;!&ndash; Text &ndash;&gt;-->
-                  <!--<div class="tab-page-content-text">-->
-                  <!--<p>25,00 <i class="fa fa-try"></i> 'lik Ödeme Gerçekleşti.</p>-->
-                  <!--<span>12 Aralık 2016 / Ahmet Elçik</span>-->
-                  <!--</div>-->
-                  <!--&lt;!&ndash; Text &ndash;&gt;-->
-                  <!--</a>-->
-                  <!--</li>-->
-                  <!--<li>-->
-                  <!--<a href="#">-->
-                  <!--&lt;!&ndash; İcon &ndash;&gt;-->
-                  <!--<div class="tab-page-content-icon-block">-->
-                  <!--<i class="fa fa-sign-out fa-rotate-90"></i>-->
-                  <!--</div>-->
-                  <!--&lt;!&ndash; İcon &ndash;&gt;-->
-                  <!--&lt;!&ndash; Text &ndash;&gt;-->
-                  <!--<div class="tab-page-content-text">-->
-                  <!--<p>25,00 <i class="fa fa-try"></i> 'lik Ödeme Gerçekleşti.</p>-->
-                  <!--<span>12 Aralık 2016 / Ahmet Elçik</span>-->
-                  <!--</div>-->
-                  <!--&lt;!&ndash; Text &ndash;&gt;-->
-                  <!--</a>-->
-                  <!--</li>-->
-                  <!--<li>-->
-                  <!--<a href="#">-->
-                  <!--&lt;!&ndash; İcon &ndash;&gt;-->
-                  <!--<div class="tab-page-content-icon-block">-->
-                  <!--<i class="fa fa-sign-out fa-rotate-90"></i>-->
-                  <!--</div>-->
-                  <!--&lt;!&ndash; İcon &ndash;&gt;-->
-                  <!--&lt;!&ndash; Text &ndash;&gt;-->
-                  <!--<div class="tab-page-content-text">-->
-                  <!--<p>25,00 <i class="fa fa-try"></i> 'lik Ödeme Gerçekleşti.</p>-->
-                  <!--<span>12 Aralık 2016 / Ahmet Elçik</span>-->
-                  <!--</div>-->
-                  <!--&lt;!&ndash; Text &ndash;&gt;-->
-                  <!--</a>-->
-                  <!--</li>-->
+                  <li>
+                  <a href="#">
+                  <!-- İcon -->
+                  <div class="tab-page-content-icon-block">
+                  <i class="fa fa-sign-out fa-rotate-90"></i>
+                  </div>
+                  <!-- İcon -->
+                  <!-- Text -->
+                  <div class="tab-page-content-text">
+                  <p>25,00 <i class="fa fa-try"></i> 'lik Ödeme Gerçekleşti.</p>
+                  <span>12 Aralık 2016 / Ahmet Elçik</span>
+                  </div>
+                  <!-- Text -->
+                  </a>
+                  </li>
+                  <li>
+                  <a href="#">
+                  <!-- İcon -->
+                  <div class="tab-page-content-icon-block">
+                  <i class="fa fa-sign-out fa-rotate-90"></i>
+                  </div>
+                  <!-- İcon -->
+                  <!-- Text -->
+                  <div class="tab-page-content-text">
+                  <p>25,00 <i class="fa fa-try"></i> 'lik Ödeme Gerçekleşti.</p>
+                  <span>12 Aralık 2016 / Ahmet Elçik</span>
+                  </div>
+                  <!-- Text -->
+                  </a>
+                  </li>
+                  <li>
+                  <a href="#">
+                  <!-- İcon -->
+                  <div class="tab-page-content-icon-block">
+                  <i class="fa fa-sign-out fa-rotate-90"></i>
+                  </div>
+                  <!-- İcon -->
+                  <!-- Text -->
+                  <div class="tab-page-content-text">
+                  <p>25,00 <i class="fa fa-try"></i> 'lik Ödeme Gerçekleşti.</p>
+                  <span>12 Aralık 2016 / Ahmet Elçik</span>
+                  </div>
+                  <!-- Text -->
+                  </a>
+                  </li>
                 </ul>
               </div>
             </tab>
@@ -210,6 +207,43 @@
       <!-- Panel -->
     </div>
 
+    <div class="col-md-4">
+      <!-- Panel -->
+      <div class="panel panel-light">
+        <!-- Panel Body -->
+        <div class="panel-body padding-0">
+          <!-- Tab -->
+          <tabset>
+            <!-- Ödemeler -->
+            <tab heading="Ödemeler" customClass="tab-ozel">
+              <div class="tab-page-content">
+                <ul class="odeme-listele-tab">
+                  <li class="tab-page-content-blank">
+                    <i class="fa fa-info-circle fa-5x"></i>
+                  </li>
+                </ul>
+              </div>
+            </tab>
+            <!-- Ödemeler -->
+
+            <!-- Notlar -->
+            <tab heading="Notlar" customClass="tab-ozel">
+              <div class="tab-page-content">
+                <ul class="not-listele-tab">
+                  <li class="tab-page-content-blank">
+                    <i class="fa fa-info-circle fa-5x"></i>
+                  </li>
+                </ul>
+              </div>
+            </tab>
+            <!-- Notlar -->
+          </tabset>
+          <!-- Tab -->
+        </div>
+        <!-- Panel Body -->
+      </div>
+      <!-- Panel -->
+    </div>
   </div>
 </div>
 <!-- Genel -->
