--- a/src/app/musteri-detay/musteri-detay.component.html
+++ b/src/app/musteri-detay/musteri-detay.component.html
@@ -304,7 +304,7 @@
                 <tab heading="Notlar" customClass="tab-ozel">
                   <div class="tab-page-content">
                     <ul class="not-listele-tab">
-                      <li class="not-listele-tab-not-ekle-btn"><button class="btn btn-primary-ozel btn-block"><i class="fa fa-plus"></i> Yeni Not</button></li>
+                      <li class="not-listele-tab-not-ekle-btn"><button (click)="staticModal.show()" class="btn btn-primary-ozel btn-block"><i class="fa fa-plus"></i> Yeni Not</button></li>
                       <li>
                         <a href="#">
                           <!-- İcon -->
