list componente icon eklendi

--- a/src/app/List/list.component.html
+++ b/src/app/List/list.component.html
@@ -54,7 +54,7 @@
                 <span>Adi / Şirket</span>
               </div>
               <div class="musteri-listele-label-header" style="float:right;padding-right: 10px">
-                <span>Bakiye</span>
+                <span><i class="fa fa-sort-numeric-desc"></i> Bakiye</span>
               </div>
             </div>
             <!-- Müşteri Listele Header -->
