yeni listeleme eklendi

--- a/src/app/List/list.component.html
+++ b/src/app/List/list.component.html
@@ -22,8 +22,46 @@
 
 <!-- Genel -->
 <div class="container-fluid m-l-230 m-t-15">
-  <div class="row">
 
+  <!-- Kasa Listele -->
+  <div class="row">
+    <div class="col-md-3">
+
+    </div>
+
+    <div class="col-md-9">
+      <!-- Panel -->
+      <div class="panel panel-light" style="border-radius: 5px">
+        <!-- Panel Heading -->
+        <div class="panel-heading" style="padding: 0">
+          <!-- List Header -->
+          <div class="list-header-block">
+            <!-- List Header Left Block -->
+            <div class="list-header-left-block">
+              <span> İsmi </span>
+            </div>
+            <!-- List Header Left Block -->
+            <!-- List Header Right Blcok -->
+            <div class="list-header-right-block">
+              <span> <i class="fa fa-sort-numeric-desc"></i> Bakiye </span>
+            </div>
+            <!-- List Header Right Blcok -->
+          </div>
+          <!-- List Header -->
+        </div>
+        <!-- Panel Heading -->
+        <!-- Panel Body -->
+        <div class="panel-body">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus est explicabo, illum impedit libero maiores natus nemo odit, optio repellat totam vel veniam voluptatum. Ad deleniti eligendi nulla officiis porro.</p>
+        </div>
+        <!-- Panel Body -->
+      </div>
+      <!-- Panel -->
+    </div>
+  </div>
+  <!-- Kasa Listele -->
+
+  <div class="row">
     <div class="col-md-3">
       <div class="panel panel-light">
 
