--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,6 +34,9 @@
 /* Tab */
 @import "scss/Tab/tab.scss";
 
+/* List */
+@import "scss/List/list.scss";
+
 body{
   font-family: 'Roboto', sans-serif;
   font-size:14px;
