--- a/src/app/List/list.component.html
+++ b/src/app/List/list.component.html
@@ -25,11 +25,9 @@
 
   <!-- Kasa Listele -->
   <div class="row">
-    <div class="col-md-3">
 
-    </div>
 
-    <div class="col-md-9">
+    <div class="col-md-12">
       <!-- Panel -->
       <div class="panel panel-light" style="border-radius: 5px">
         <!-- Panel Heading -->
@@ -51,8 +49,98 @@
         </div>
         <!-- Panel Heading -->
         <!-- Panel Body -->
-        <div class="panel-body">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus est explicabo, illum impedit libero maiores natus nemo odit, optio repellat totam vel veniam voluptatum. Ad deleniti eligendi nulla officiis porro.</p>
+        <div class="panel-body" style="padding: 0;">
+          <!-- List Body Block -->
+          <div class="list-body-block">
+            <!-- Hesap Listele -->
+            <div id="hesap-listele-body-block">
+              <ul class="hesap-listele-ul">
+                <li>
+                  <a href="#">
+                    <!-- Hesap Listele Left Block -->
+                    <div class="hesap-listele-left-block">
+                      <!-- Hesap Listele Left İcon -->
+                      <div class="hesap-listele-icon-block">
+                        <i class="fa fa-bank"></i>
+                      </div>
+                      <!-- Hesap Listele Left İcon -->
+                      <!-- Hesap Listele İsmi -->
+                      <div class="hesap-listele-ismi-adi">
+                        <span>Denizli Merkez Şube</span>
+                      </div>
+                      <!-- Hesap Listele İsmi -->
+                    </div>
+                    <!-- Hesap Listele Left Block -->
+                    <!-- Hesap Listele Right Block -->
+                    <div class="hesap-listele-right-block">
+                      <!-- Hesap Bakiye -->
+                      <div class="hesap-listele-bakiye">
+                        <span>250,00 <i class="fa fa-try"></i></span>
+                      </div>
+                      <!-- Hesap Bakiye -->
+                    </div>
+                    <!-- Hesap Listele Right Block -->
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <!-- Hesap Listele Left Block -->
+                    <div class="hesap-listele-left-block">
+                      <!-- Hesap Listele Left İcon -->
+                      <div class="hesap-listele-icon-block">
+                        <i class="fa fa-bank"></i>
+                      </div>
+                      <!-- Hesap Listele Left İcon -->
+                      <!-- Hesap Listele İsmi -->
+                      <div class="hesap-listele-ismi-adi">
+                        <span>Denizli Merkez Şube</span>
+                      </div>
+                      <!-- Hesap Listele İsmi -->
+                    </div>
+                    <!-- Hesap Listele Left Block -->
+                    <!-- Hesap Listele Right Block -->
+                    <div class="hesap-listele-right-block">
+                      <!-- Hesap Bakiye -->
+                      <div class="hesap-listele-bakiye">
+                        <span>250,00 <i class="fa fa-try"></i></span>
+                      </div>
+                      <!-- Hesap Bakiye -->
+                    </div>
+                    <!-- Hesap Listele Right Block -->
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <!-- Hesap Listele Left Block -->
+                    <div class="hesap-listele-left-block">
+                      <!-- Hesap Listele Left İcon -->
+                      <div class="hesap-listele-icon-block">
+                        <i class="fa fa-bank"></i>
+                      </div>
+                      <!-- Hesap Listele Left İcon -->
+                      <!-- Hesap Listele İsmi -->
+                      <div class="hesap-listele-ismi-adi">
+                        <span>Denizli Merkez Şube</span>
+                      </div>
+                      <!-- Hesap Listele İsmi -->
+                    </div>
+                    <!-- Hesap Listele Left Block -->
+                    <!-- Hesap Listele Right Block -->
+                    <div class="hesap-listele-right-block">
+                      <!-- Hesap Bakiye -->
+                      <div class="hesap-listele-bakiye">
+                        <span>250,00 <i class="fa fa-try"></i></span>
+                      </div>
+                      <!-- Hesap Bakiye -->
+                    </div>
+                    <!-- Hesap Listele Right Block -->
+                  </a>
+                </li>
+              </ul>
+            </div>
+            <!-- Hesap Listele -->
+          </div>
+          <!-- List Body Block -->
         </div>
         <!-- Panel Body -->
       </div>
