arac listeleme yapildi

--- a/src/app/List/list.component.html
+++ b/src/app/List/list.component.html
@@ -26,8 +26,79 @@
   <!-- Kasa Listele -->
   <div class="row">
 
+    <!-- Araç Listele -->
+    <div class="col-md-6">
+      <!-- Panel -->
+      <div class="panel panel-light" style="border-radius: 5px">
+        <!-- Panel Heading -->
+        <div class="panel-heading" style="padding: 0">
+          <!-- List Header -->
+          <div class="list-header-block">
+            <!-- List Header Left Block -->
+            <div class="list-header-left-block">
+              <span> Araç </span>
+            </div>
+            <!-- List Header Left Block -->
+            <!-- List Header Right Blcok -->
+            <div class="list-header-right-block">
+              <span> <i class="fa fa-location-arrow"></i> Konumu </span>
+            </div>
+            <!-- List Header Right Blcok -->
+          </div>
+          <!-- List Header -->
+        </div>
+        <!-- Panel Heading -->
+        <!-- Panel Body -->
+        <div class="panel-body" style="padding: 0;">
+          <!-- List Body Block -->
+          <div class="list-body-block">
+            <!-- Hesap Listele -->
+            <div id="arac-listele-body-block">
+              <ul class="arac-listele-ul">
+                <li>
+                  <a href="#">
+                    <!-- Araç Listele Left Block -->
+                    <div class="arac-listele-left-block">
+                      <!-- Araç Listele Left İcon -->
+                      <div class="arac-listele-icon-block">
+                        <i class="fa fa-car"></i>
+                      </div>
+                      <!-- Araç Listele Left İcon -->
+                      <!-- Araç Listele İsmi -->
+                      <div class="arac-listele-ismi-adi">
+                        <span>BMW 3 Serisi <small>( Dizel )</small></span>
+                        <span class="arac-listele-arac-plaka">35 D 8897</span>
+                      </div>
+                      <!-- Araç Listele İsmi -->
+                    </div>
+                    <!-- Araç Listele Left Block -->
+                    <!-- Araç Listele Right Block -->
+                    <div class="arac-listele-right-block">
+                     <!-- Araç Konumu -->
+                      <div class="arac-listele-arac-konumu">
+                        <span>Denizli Merkez</span>
+                      </div>
+                     <!-- Araç Konumu -->
+                    </div>
+                    <!-- Araç Listele Right Block -->
+                  </a>
+                </li>
 
-    <div class="col-md-12">
+              </ul>
+            </div>
+            <!-- Hesap Listele -->
+          </div>
+          <!-- List Body Block -->
+        </div>
+        <!-- Panel Body -->
+      </div>
+      <!-- Panel -->
+    </div>
+    <!-- Araç Listele -->
+
+
+    <!-- Hesap Listele -->
+    <div class="col-md-6">
       <!-- Panel -->
       <div class="panel panel-light" style="border-radius: 5px">
         <!-- Panel Heading -->
@@ -146,6 +217,7 @@
       </div>
       <!-- Panel -->
     </div>
+    <!-- Hesap Listele -->
   </div>
   <!-- Kasa Listele -->
 
