gider listeleme yapildi

--- a/src/app/List/list.component.html
+++ b/src/app/List/list.component.html
@@ -23,6 +23,94 @@
 <!-- Genel -->
 <div class="container-fluid m-l-230 m-t-15">
 
+  <div class="row">
+    <!-- Gider Listele -->
+    <div class="col-md-12">
+      <!-- Panel -->
+      <div class="panel panel-light" style="border-radius: 5px">
+        <!-- Panel Heading -->
+        <div class="panel-heading" style="padding: 0;">
+          <!-- List Header -->
+          <div class="list-header-block">
+            <!-- List Header Orta Block -->
+            <div class="list-header-left-block">
+              <span> Açıklama </span>
+            </div>
+            <!-- List Header Orta Block -->
+
+            <!-- List Header Right Block -->
+            <div class="list-header-right-block">
+              <span> <i class="fa fa-sort-numeric-desc"></i> Bakiye </span>
+            </div>
+            <!-- List Header Right Block -->
+          </div>
+          <!-- List Header -->
+        </div>
+        <!-- Panel Heading -->
+        <!-- Panel Body -->
+        <div class="panel-body" style="padding: 0;">
+          <!-- List Body Block -->
+          <div class="list-body-block">
+            <!-- Hesap Listele -->
+            <div id="gider-listele-body-block">
+              <ul class="gider-listele-ul">
+                <li>
+                  <a href="#">
+                    <!-- Gider Listele Left Block -->
+                    <div class="gider-listele-left-block">
+                      <!-- Gider Listele Left İcon -->
+                      <div class="gider-listele-icon-block">
+                        <i class="fa fa-file"></i>
+                        <i class="fa fa-circle gider-listele-icon-odeme-durumu-kisa odeme-durumu-green-icon"></i>
+                      </div>
+                      <!-- Gider Listele Left İcon -->
+                      <!-- Gider Listele İsmi -->
+                      <div class="gider-listele-aciklama-block">
+                        <span>Deneme Gider Açıklama</span>
+                        <span class="gider-listele-kategorisi">35 D 8897</span>
+                      </div>
+                      <!-- Gider Listele İsmi -->
+                    </div>
+                    <!-- Gider Listele Orta Block -->
+                    <!--<div class="gider-listele-orta-block">-->
+
+                    <!--</div>-->
+                    <!-- Gider Listele Orta Block -->
+                    <!-- Gider Listele Left Block -->
+                    <!-- Gider Listele Right Block -->
+                    <div class="gider-listele-right-block">
+                      <!-- Gider Bakiye Bilgi -->
+                      <div class="gider-listele-bakiye-bilgisi">
+                        <div class="gider-listele-kalan-meblag-block">
+                          <span>Kalan Meblağ : <b>25,00</b> <i class="fa fa-try"></i></span>
+                        </div>
+                        <div class="gider-listele-genel-toplam-block">
+                          <span>Genel Toplam : <b>100,00</b> <i class="fa fa-try"></i></span>
+                        </div>
+                        <div class="gider-listele-odeme-durum-bilgisi-block">
+                          <span><i class="fa fa-minus"></i> <b>ÖDENECEK</b></span>
+                          <!--<span class="gider-listele-odeme-durumu-odendi"><i class="fa fa-check-circle-o"></i> <b>ÖDENDİ</b></span>-->
+                        </div>
+                      </div>
+                      <!-- Gider Bakiye Bilgi -->
+                    </div>
+                    <!-- Gider Listele Right Block -->
+                  </a>
+                </li>
+
+              </ul>
+            </div>
+            <!-- Hesap Listele -->
+          </div>
+          <!-- List Body Block -->
+        </div>
+        <!-- Panel Body -->
+      </div>
+      <!-- Panel -->
+    </div>
+    <!-- Gider Listele -->
+  </div>
+
   <!-- Kasa Listele -->
   <div class="row">
 
